--- a/Pandas-Seaborn.ipynb
+++ b/Pandas-Seaborn.ipynb
@@ -1297,7 +1297,7 @@
    "source": [
     "# Please help us evaluate these workshops:\n",
     "\n",
-    "[Link to review](https://docs.google.com/forms/d/e/1FAIpQLScfmknjXXamDhki6HBf8qap0Vo1fFHWI8giJ19YB4heWV3rHw/viewform?usp=pp_url&entry.1132314417=Data+Visualization+with+Python+I:+Plotting+Fundamentals+(5/12/23))"
+    "[Link to review](https://forms.gle/LTmgZ89K8J8Z8BdZ9)"
    ]
   }
  ],
@@ -1317,7 +1317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.7"
   },
   "toc": {
    "base_numbering": 1,
